resources/nextjs/base/deployment.yaml
# 'apps/nextjs/base/deployment.yaml'
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-deployment
  namespace: nextjs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      imagePullSecrets:
        - name: vpittamp-acr-dockercfg # secret produced by ESO
      containers:
      - name: nextjs
        image: vpittamp.azurecr.io/chat-frontend:0.2.96
        livenessProbe:
          httpGet: { path: /ping, port: 3000 } # Consider changing port to a numeric value: port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet: { path: /ping, port: 3000 } # Consider changing port to a numeric value: port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
